--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
 Theme Name:WP Bock Theme Boilerplate
-Theme URI: https://patternswp.com/my-blank-theme/
+Theme URI: 
 Author: codersantosh 
 Author URI: https://patternswp.com/
 Description: A a starter WordPress theme to develop WordPress block themes with modern development practices
 Requires at least: 6.5
 Tested up to: 6.6
 Requires PHP: 5.6
-Version: 1.2
+Version: 1.0.0
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/old-licenses/gpl-2.0.html
 Text Domain: wp-block-theme-boilerplate
