Added spacing on theme.json and fixed responsivenes

--- a/src/_global.scss
+++ b/src/_global.scss
@@ -162,6 +162,11 @@ hr:not(.wp-block-separator) {
 }
 
 //WordPress Reset
+.pwp-child-reset {
+	> * {
+		margin-block-start: 0 !important;
+	}
+}
 :where(.wp-site-blocks) > * + * {
 	margin-block-start: 0 !important;
 
